# universal-mail--automation

./: .coverage  .dockerignore  .gitignore  AGENTS.md  ATLAS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Dockerfile  GEMINI.md  INSTALL.md  MANIFEST.in  Makefile  README.md  archive_old_inbox.applescript  archive_sorted.py  archived_scan.py  auto_drain.py  bulk_sweeper.py  cli.py  com.user.gmail_labeler.plist  com.user.mail_automation.plist  configure_smart_mailboxes.py  create_smart_mailboxes.scpt  deploy.sh  draft_writer.py  gmail_auth.py  gmail_imap_sweep.py  gmail_labeler.py  gmail_labeler_legacy.py  icloud_triage.py  imap_rules.py  inbox_sweep.py  llms.txt  mail_send.py  mail_send_safety.py  mark_rot_read.py  obligations_build.py  pr130.txt  pricing.md  (+13 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml
.well-known/: agent.json
acp/: README.md  __init__.py  feed.py  models.py  payment.py  product_feed.json  router.py
api/: README.md  __init__.py  app.py  auth.py  billing.py  metering.py  ops.py  plans.py  receipts.py  schemas.py  service.py  store.py  triage_runtime.py  well_known.py
auth/: __init__.py  onepassword.py  service.py
cloudflare/: worker.mjs  worker.test.mjs
config/: protected_senders.example.txt
core/: __init__.py  config.py  external_resolver.py  followup_resolver.py  github_resolver.py  historical_intelligence.py  input_validation.py  intake.py  license.py  mail_action_ledger.py  mail_action_plan.py  mail_delivery.py  mail_draft_approval.py  mail_draft_package.py  mail_evidence_review.py  mail_history_export.py  mail_resolver_plan.py  mail_resolver_receipt.py  mail_status.py  models.py  ops_summary.py  protocols.py  provider_surface_plan.py  rules.py  state.py  unsubscribe.py  voice.py  vox_transport.py
docs/: API_DOCS.md  POSITIONING.md  PRICING.md  agent-commerce.md  cloudflare-share-demo.md
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
docs/plans/: 2026-05-31-client-facing-product-roadmap.md  2026-05-31-provenance-evolution.md  2026-06-01-closeout-commerce-surface-merged.md  2026-06-01-handoff-cloudflare-share-backend.md  2026-06-01-handoff-cloudflare-share-shipped.md  2026-06-01-handoff-commerce-surface-merged.md  2026-06-02-handoff-cloudflare-ci-domain.md  2026-06-02-handoff-product-alchemy.md  2026-06-05-closeout-recourse-domain.md  2026-06-05-handoff-recourse-domain.md  2026-06-15-master-plan-mail-operations-os.md  2026-06-15-operator-dashboard-canonicalization.md  in-my-head-transports.md  market-gap-universal-mail-safe-cleanup.md  synthesis-universal-mail-product-alchemy.md
docs/plans/expansive-inquiry-universal-mail-product-copy/: 00-scope.md  01-logic.md  02-mythos.md  03-bridge.md  04-meta.md  05-pattern.md  06-synthesis.md
docs/plans/premortem-universal-mail-safe-cleanup/: premortem-report-20260602-125121.html  premortem-transcript-20260602-125121.md
docs/reviews/2026-06-03-bug-coverage-sweep/: CLOSEOUT_SUMMARY.md  RANKED-REPORT.md  REPORT.md  findings.json  verified-findings.json
docs/schemas/: external-resolver-v1.md  followup-resolver-v1.md  github-resolver-v1.md  intake-packet-v1.md  mail-action-ledger-v1.md  mail-action-plan-v1.md  mail-delivery-v1.md  mail-draft-approval-v1.md  mail-draft-package-v1.md  mail-evidence-review-v1.md  mail-history-export-v1.md  mail-intelligence-v1.md  mail-invariant-rollup-v1.md  mail-resolver-ledger-v1.md  mail-resolver-plan-v1.md  mail-status-v1.md  ops-summary-v1.md  provider-surface-plan-v1.md
licensing/: __init__.py  checkout.py
mcp_server/: __init__.py  __main__.py  server.py
platform/: __init__.py  checkout.py  saas_runner.py
providers/: __init__.py  base.py  gmail.py  imap.py  mailapp.py  outlook.py
scripts/: build_macos_bundle.sh  check-mail-union.py  deploy.sh  gen_commerce_artifacts.py  intake_now.sh
tests/: conftest.py  test_acp.py  test_api.py  test_archived_consume.py  test_archived_scan.py  test_auth_api.py  test_auth_service.py  test_auto_drain.py  test_base_provider.py  test_billing.py  test_checkout.py  test_cli.py  test_draft_writer_saver.py  test_drain_gate.py  test_external_resolver.py  test_followup_resolver.py  test_github_resolver.py  test_gmail_imap_starred_sweep.py  test_gmail_labeler_legacy.py  test_historical_intelligence.py  test_icloud_triage_archive.py  test_imap_append.py  test_imap_archive.py  test_inbox_sweep_decide.py  test_license.py  test_mail_action_ledger.py  test_mail_action_plan.py  test_mail_delivery.py  test_mail_draft_approval.py  test_mail_draft_package.py  test_mail_evidence_review.py  test_mail_history_export.py  test_mail_resolver_plan.py  test_mail_resolver_receipt.py  test_mail_send.py  test_mail_status.py  test_mail_union_guard.py  test_mailapp.py  test_mcp.py  test_obligations_protocols.py  (+17 more)
tests/fixtures/historical/: latest.json
tests/fixtures/ops/: latest-actions.md  latest.json
tools/: protected_senders_filter.py
uma_platform/: __init__.py  checkout.py  saas_runner.py
universal_mail_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: index.html  next.config.ts  ops.html  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
