[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-mail-automation"
version = "0.1.0"
description = "Multi-provider inbox triage across Gmail, Outlook, IMAP, and macOS Mail with a shared categorization engine, Eisenhower priority tiers, and time-based escalation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthony", email = "anthony@organvm.org" }]
keywords = ["email", "gmail", "outlook", "imap", "automation", "triage", "inbox", "labeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "google-api-python-client>=2.197.0,<3",
    "google-auth-httplib2>=0.4.0,<1",
    "google-auth-oauthlib>=1.4.0,<2",
]

[project.optional-dependencies]
outlook = [
    "msal>=1.20.0",
    "requests>=2.30.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.28.1",
    "stripe>=10.0.0",
]
mcp = [
    "mcp>=1.1.2",
]
all = [
    "msal>=1.20.0",
    "requests>=2.30.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.28.1",
    "stripe>=10.0.0",
    "mcp>=1.1.2",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/organvm-iii-ergon/universal-mail--automation"
Repository = "https://github.com/organvm-iii-ergon/universal-mail--automation"
Changelog = "https://github.com/organvm-iii-ergon/universal-mail--automation/blob/main/CHANGELOG.md"
"Live Demo" = "https://uma.4444j99.dev"

[project.scripts]
umail = "cli:main"
umail-mcp = "mcp_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["api*", "acp*", "audit*", "auth*", "config*", "core*", "mcp_server*", "platform*", "providers*"]

[tool.setuptools]
py-modules = ["analyze_strategic_value", "archive_sorted", "auto_drain", "bulk_sweeper", "check_health", "cli", "configure_smart_mailboxes", "draft_writer", "final_sweep", "gmail_auth", "gmail_imap_sweep", "gmail_labeler", "gmail_labeler_legacy", "icloud_triage", "imap_rules", "inbox_sweep", "inspect_remaining", "mark_rot_read", "obligations_build", "organize_labels", "recount"]
