[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-mail-automation"
version = "0.2.0"
description = "Multi-provider inbox triage across Gmail, Outlook, iCloud, and macOS Mail with a shared categorization engine, Eisenhower priority tiers, and time-based escalation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anthony", email = "anthony@organvm.org" }]
keywords = ["email", "gmail", "outlook", "imap", "automation", "triage", "inbox", "labeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3,<7",
    "google-api-python-client>=2.197.0,<3",
    "google-auth-httplib2>=0.4.0,<1",
    "google-auth-oauthlib>=1.4.0,<2",
]

[project.optional-dependencies]
outlook = [
    "msal>=1.37.0,<2",
    "requests>=2.34.2,<3",
]
yaml = [
    "pyyaml>=6.0.3,<7",
]
api = [
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "stripe>=15.2.1,<16",
]
mcp = [
    "mcp>=1.27.2,<2",
]
all = [
    "msal>=1.37.0,<2",
    "requests>=2.34.2,<3",
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.28.1",
    "stripe>=15.2.1,<16",
    "mcp>=1.27.2,<2",
    "pyyaml>=6.0.3,<7",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/organvm-iii-ergon/universal-mail--automation"
Repository = "https://github.com/organvm-iii-ergon/universal-mail--automation"
Changelog = "https://github.com/organvm-iii-ergon/universal-mail--automation/blob/main/CHANGELOG.md"
"Live Demo" = "https://uma.4444j99.dev"

[project.scripts]
umail = "cli:main"
umail-mcp = "mcp_server.server:main"
mail-send = "mail_send:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["api*", "acp*", "audit*", "auth*", "config*", "core*", "mcp_server*", "platform*", "providers*"]

[tool.setuptools]
py-modules = ["analyze_strategic_value", "archive_sorted", "auto_drain", "bulk_sweeper", "check_health", "cli", "configure_smart_mailboxes", "draft_writer", "final_sweep", "gmail_auth", "gmail_imap_sweep", "gmail_labeler", "gmail_labeler_legacy", "icloud_triage", "imap_rules", "inbox_sweep", "inspect_remaining", "mail_send", "mark_rot_read", "obligations_build", "organize_labels", "recount"]
